--- a/public/lacteos.html
+++ b/public/lacteos.html
@@ -2,84 +2,70 @@
 <html lang="es">
 <head>
   <meta charset="UTF-8">
-  <title>Lácteos</title>
-
-  <!-- 🔗 Enlaces de estilos -->
-  <link rel="stylesheet" href="navbar.css">  <!-- Barra superior -->
-  <link rel="stylesheet" href="productos.css"> <!-- Tus estilos de productos -->
+  <title>🧀 Lácteos</title>
+  <link rel="stylesheet" href="navbar.css">
+  <link rel="stylesheet" href="productos.css">
 </head>
 <body>
+  <div id="navbar-container"></div>
 
-  <!-- 🔵 NAVBAR -->
-  <header class="navbar">
-    <div class="navbar-logo">
-      <img src="img/logo.png" alt="Logo Super" />
-    </div>
-
-    <div class="navbar-search">
-      <input type="text" placeholder="Encuentra lo que necesitas" />
-      <button><i class="fas fa-search"></i></button>
-    </div>
-
-    <div class="navbar-account">
-      <div class="account-icon">
-        <i class="fas fa-user"></i>
-      </div>
-      <div class="account-text">
-        <span>¡Hola! Inicia sesión</span><br>
-        <strong>Mi cuenta</strong>
-      </div>
-    </div>
-
-    <div class="navbar-cart">
-      <i class="fas fa-shopping-cart"></i>
-      <span>Carrito</span>
-    </div>
-  </header>
-
-  <!-- 🧀 CONTENIDO DE LÁCTEOS -->
   <main>
     <header class="titulo-lacteos">
       <h1>🧀 Productos Lácteos</h1>
     </header>
-
-    <section class="productos-container" id="productos-container">
-      <!-- Aquí se insertarán los productos automáticamente -->
-    </section>
+    <section class="productos-container" id="productos-container"></section>
   </main>
 
-  <!-- 🧩 Scripts -->
   <script src="https://kit.fontawesome.com/a076d05399.js" crossorigin="anonymous"></script>
 
   <script>
-    async function cargarProductos() {
+    fetch("navbar.html")
+      .then(res => res.text())
+      .then(html => {
+        document.getElementById("navbar-container").innerHTML = html;
+        inicializarNavbar();
+      });
+
+    async function inicializarNavbar() {
       try {
-        const res = await fetch('/productos/lacteos');
-        const productos = await res.json();
+        const res = await fetch('/getUser');
+        const user = await res.json();
+        const account = document.getElementById('navbar-account');
+        const text = document.getElementById('account-text');
 
-        const contenedor = document.getElementById('productos-container');
-        contenedor.innerHTML = '';
-
-        productos.forEach(p => {
-          const card = document.createElement('div');
-          card.classList.add('producto-card');
-          card.innerHTML = `
-            <img src="${p.image_url}" alt="${p.name}" class="producto-img">
-            <div class="producto-info">
-              <p class="precio">$${parseFloat(p.price).toLocaleString()}</p>
-              <h3 class="nombre">${p.name}</h3>
-              <button class="btn-agregar">Agregar 🛒</button>
-            </div>
-          `;
-          contenedor.appendChild(card);
-        });
-      } catch (error) {
-        console.error('Error cargando productos:', error);
+        if (!user.username) {
+          text.innerHTML = `<span>¡Hola! Inicia sesión</span><br><strong>Mi cuenta</strong>`;
+          account.onclick = () => window.location.href = '/index.html';
+        } else {
+          text.innerHTML = `<span>Bienvenido</span><br><strong>${user.username}</strong>`;
+          account.onclick = async () => {
+            if (confirm("¿Deseas cerrar sesión?")) {
+              await fetch('/logout');
+              window.location.href = '/index.html';
+            }
+          };
+        }
+      } catch (err) {
+        console.error('Error navbar:', err);
       }
     }
 
+    async function cargarProductos() {
+      const res = await fetch('/productos/lacteos');
+      const productos = await res.json();
+      const cont = document.getElementById('productos-container');
+      cont.innerHTML = productos.map(p => `
+        <div class="producto-card">
+          <img src="${p.image_url}" alt="${p.name}" class="producto-img">
+          <div class="producto-info">
+            <p class="precio">$${parseFloat(p.price).toLocaleString()}</p>
+            <h3>${p.name}</h3>
+            <button class="btn-agregar">Agregar 🛒</button>
+          </div>
+        </div>`).join('');
+    }
     cargarProductos();
   </script>
-
 </body>
 </html>
+
