--- a/public/navbar.html
+++ b/public/navbar.html
@@ -4,14 +4,12 @@
   </div>
 
   <div class="navbar-search">
-    <input type="text" placeholder="Encuentra lo que necesitas" />
-    <button><i class="fa-solid fa-magnifying-glass"></i></button>
+    <input id="search-input" type="text" placeholder="Encuentra lo que necesitas" />
+    <button id="search-btn"><i class="fa-solid fa-magnifying-glass"></i></button>
   </div>
 
   <div class="navbar-account" id="navbar-account">
-    <div class="account-icon">
-      <i class="fa-solid fa-user"></i>
-    </div>
+    <div class="account-icon"><i class="fa-solid fa-user"></i></div>
     <div class="account-text" id="account-text">
       <span>¡Hola! Inicia sesión</span><br>
       <strong>Mi cuenta</strong>
