barra de busqueda funcional

--- a/public/aseo_personal.html
+++ b/public/aseo_personal.html
@@ -2,89 +2,34 @@
 <html lang="es">
 <head>
   <meta charset="UTF-8">
-  <title>🧼 Aseo Personal</title>
+  <title>🛒 Aseo Personal</title>
 
   <link rel="stylesheet" href="navbar.css">
   <link rel="stylesheet" href="productos.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
 </head>
-<body>
+<body data-categoria="aseo_personal">
+
   <div id="navbar-container"></div>
 
   <main>
-    <button class="btn-volver" onclick="window.location.href='super.html'">
-      ⬅️ Volver al inicio
-    </button>
-    <header><h1>🧼 Aseo Personal</h1></header>
+    <button class="btn-volver" onclick="window.location.href='super.html'">⬅️ Volver al inicio</button>
+    <header id="titulo-categoria"><h1>🛒 Productos de Aseo Personal</h1></header>
     <section class="productos-container" id="productos-container"></section>
   </main>
 
   <script src="navbar.js"></script>
+  <script src="categoria.js"></script>
 
   <script>
-    let productos = [];
-
     fetch("navbar.html")
-      .then(r => r.text())
-      .then(h => {
-        document.getElementById("navbar-container").innerHTML = h;
+      .then(res => res.text())
+      .then(html => {
+        document.getElementById("navbar-container").innerHTML = html;
         inicializarNavbar();
-        inicializarBusqueda();
-      });
-
-    async function cargarProductos() {
-      const res = await fetch('/productos/aseo_personal');
-      productos = await res.json();
-      mostrarProductos(productos);
-    }
-
-    function mostrarProductos(lista) {
-      const cont = document.getElementById('productos-container');
-      if (!lista.length) {
-        cont.innerHTML = `<p class="no-resultados">No se encontraron productos.</p>`;
-        return;
-      }
-      cont.innerHTML = lista.map(p => `
-        <div class="producto-card">
-          <img src="${p.image_url}" alt="${p.name}" class="producto-img">
-          <div class="producto-info">
-            <p class="precio">$${parseFloat(p.price).toLocaleString()}</p>
-            <h3>${p.name}</h3>
-            <button class="btn-agregar" data-nombre="${p.name}" data-precio="${p.price}" data-imagen="${p.image_url}">
-              Agregar 🛒
-            </button>
-          </div>
-        </div>`).join('');
-
-      document.querySelectorAll('.btn-agregar').forEach(btn => {
-        btn.addEventListener('click', () => {
-          const producto = {
-            name: btn.dataset.nombre,
-            price: parseFloat(btn.dataset.precio),
-            image_url: btn.dataset.imagen
-          };
-          agregarAlCarrito(producto);
-        });
-      });
-    }
-
-    function agregarAlCarrito(producto) {
-      const carrito = JSON.parse(localStorage.getItem('carrito') || '[]');
-      carrito.push(producto);
-      localStorage.setItem('carrito', JSON.stringify(carrito));
-
-      const contador = document.getElementById('cart-count');
-      if (contador) contador.textContent = carrito.length > 0 ? carrito.length : '';
-
-      alert(`${producto.name} agregado al carrito 🛒`);
-    }
-
-    function filtrarProductosPorBusqueda(texto) {
-      if (!texto) mostrarProductos(productos);
-      else mostrarProductos(productos.filter(p => p.name.toLowerCase().includes(texto)));
-    }
-
-    cargarProductos();
+      })
+      .catch(err => console.error("Error cargando navbar:", err));
   </script>
 </body>
 </html>
+
