--- a/public/lacteos.html
+++ b/public/lacteos.html
@@ -8,117 +8,35 @@
   <link rel="stylesheet" href="navbar.css">
   <link rel="stylesheet" href="productos.css">
 
-  <!-- 🔹 Iconos -->
+  <!-- 🔹 Iconos Font Awesome -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
 </head>
-<body>
+<body data-categoria="lacteos">
+
   <!-- 🔹 Contenedor del Navbar -->
   <div id="navbar-container"></div>
 
-  <!-- 🔹 Contenido principal -->
+  <!-- 🛒 Sección de productos -->
   <main>
-    <button class="btn-volver" onclick="window.location.href='super.html'">
-      ⬅️ Volver al inicio
-    </button>
-
-    <header class="titulo-lacteos">
-      <h1>🧀 Productos Lácteos</h1>
-    </header>
-
+    <button class="btn-volver" onclick="window.location.href='super.html'">⬅️ Volver al inicio</button>
+    <header id="titulo-categoria"><h1>🧀 Productos de Lácteos</h1></header>
     <section class="productos-container" id="productos-container"></section>
   </main>
 
   <!-- 🔹 Scripts -->
   <script src="navbar.js"></script>
+  <script src="categoria.js"></script>
 
   <script>
-    let productos = [];
-
-    // ✅ Cargar el navbar
+    // Cargar el navbar dinámicamente
     fetch("navbar.html")
       .then(res => res.text())
       .then(html => {
         document.getElementById("navbar-container").innerHTML = html;
-        inicializarNavbar();
-        inicializarBusqueda();
+        inicializarNavbar(); // activa usuario, carrito y búsqueda
       })
       .catch(err => console.error("Error cargando navbar:", err));
-
-    // ✅ Cargar productos desde el servidor
-    async function cargarProductos() {
-      try {
-        const res = await fetch('/productos/lacteos');
-        productos = await res.json();
-        mostrarProductos(productos);
-      } catch (err) {
-        console.error('Error cargando productos:', err);
-      }
-    }
-
-    // ✅ Mostrar productos en la página
-    function mostrarProductos(lista) {
-      const cont = document.getElementById('productos-container');
-      if (!lista.length) {
-        cont.innerHTML = `<p class="no-resultados">No se encontraron productos.</p>`;
-        return;
-      }
-
-      cont.innerHTML = lista.map(p => `
-        <div class="producto-card">
-          <img src="${p.image_url}" alt="${p.name}" class="producto-img">
-          <div class="producto-info">
-            <p class="precio">$${parseFloat(p.price).toLocaleString()}</p>
-            <h3>${p.name}</h3>
-            <button class="btn-agregar"
-              data-nombre="${p.name}"
-              data-precio="${p.price}"
-              data-imagen="${p.image_url}">
-              Agregar 🛒
-            </button>
-          </div>
-        </div>
-      `).join('');
-
-      // Activar botones de agregar al carrito
-      document.querySelectorAll('.btn-agregar').forEach(btn => {
-        btn.addEventListener('click', () => {
-          const producto = {
-            name: btn.dataset.nombre,
-            price: parseFloat(btn.dataset.precio),
-            image_url: btn.dataset.imagen
-          };
-          agregarAlCarrito(producto);
-        });
-      });
-    }
-
-    // ✅ Agregar producto al carrito
-    function agregarAlCarrito(producto) {
-      const carrito = JSON.parse(localStorage.getItem('carrito') || '[]');
-      carrito.push(producto);
-      localStorage.setItem('carrito', JSON.stringify(carrito));
-
-      const contador = document.getElementById('cart-count');
-      if (contador) contador.textContent = carrito.length > 0 ? carrito.length : '';
-
-      alert(`${producto.name} agregado al carrito 🛒`);
-    }
-
-    // 🔍 Función llamada por navbar.js al buscar
-    function filtrarProductosPorBusqueda(texto) {
-      if (!texto) {
-        mostrarProductos(productos);
-      } else {
-        const filtrados = productos.filter(p =>
-          p.name.toLowerCase().includes(texto)
-        );
-        mostrarProductos(filtrados);
-      }
-    }
-
-    // 🚀 Iniciar
-    cargarProductos();
   </script>
+
 </body>
 </html>
-
