--- a/public/super.html
+++ b/public/super.html
@@ -8,7 +8,7 @@
   <link rel="stylesheet" href="navbar.css">
   <link rel="stylesheet" href="super.css">
 
-  <!-- 🔹 Iconos (versión moderna de Font Awesome 6) -->
+  <!-- 🔹 Iconos Font Awesome -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
 </head>
 <body>
@@ -56,7 +56,7 @@
       .then(res => res.text())
       .then(html => {
         document.getElementById("navbar-container").innerHTML = html;
-        inicializarNavbar(); // 👈 activa usuario + carrito
+        inicializarNavbar(); // 👈 activa usuario, carrito y búsqueda
       })
       .catch(err => console.error("Error cargando navbar:", err));
   </script>
