--- a/public/aseo_personal.html
+++ b/public/aseo_personal.html
@@ -8,6 +8,7 @@
   <link rel="stylesheet" href="productos.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
 </head>
+<body class="fondo-aseo-personal">
 <body data-categoria="aseo_personal">
 
   <div id="navbar-container"></div>
@@ -30,6 +31,7 @@
       })
       .catch(err => console.error("Error cargando navbar:", err));
   </script>
+  </body>
 </body>
 </html>
 
