--- a/public/lacteos.html
+++ b/public/lacteos.html
@@ -11,7 +11,10 @@
   <!-- 🔹 Iconos Font Awesome -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
 </head>
+<body class="fondo-lacteos">
 <body data-categoria="lacteos">
+  
+
 
   <!-- 🔹 Contenedor del Navbar -->
   <div id="navbar-container"></div>
@@ -37,6 +40,6 @@
       })
       .catch(err => console.error("Error cargando navbar:", err));
   </script>
-
+</body>
 </body>
 </html>
