--- a/public/aseo_hogar.html
+++ b/public/aseo_hogar.html
@@ -8,8 +8,8 @@
   <link rel="stylesheet" href="productos.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
 </head>
+<body class="fondo-aseo-hogar">
 <body data-categoria="aseo_hogar">
-
   <div id="navbar-container"></div>
 
   <main>
@@ -30,5 +30,6 @@
       })
       .catch(err => console.error("Error cargando navbar:", err));
   </script>
+  </body>
 </body>
 </html>
