--- a/public/despensa.html
+++ b/public/despensa.html
@@ -8,7 +8,8 @@
   <link rel="stylesheet" href="productos.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
 </head>
-<body data-categoria="despensa">
+<body class="fondo-despensa">
+<body data-categoria="despensa"></body>
 
   <div id="navbar-container"></div>
 
@@ -30,5 +31,6 @@
       })
       .catch(err => console.error("Error cargando navbar:", err));
   </script>
+  </body>
 </body>
 </html>
